--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.sidebar-text {
+		@apply absolute z-10 left-14 w-auto p-2 m-2 min-w-max rounded-md shadow-md bg-gray-900 self-center text-xs font-bold text-white transition-all duration-100 ease-in scale-0 before:content-[''] before:absolute before:bg-gray-900 before:w-2 before:h-2 before:rotate-45 before:top-1/2 before:left-0 before:-translate-x-1/2;
+	}
+	.sidebar-icon {
+		@apply relative flex items-center content-end h-12 w-12 mt-2 mb-2 mx-auto px-3 box-border bg-gray-800 text-green-500 rounded-3xl transition-all duration-300 ease-in hover:rounded-xl hover:bg-green-500 hover:text-white;
+	}
+	.nav-item {
+		@apply py-1 px-3 mx-1 transition-all duration-100 rounded cursor-pointer hover:text-white hover:bg-gray-500;
+	}
+	.hover-icon {
+		@apply absolute bottom-0 translate-y-full left-1/2 -translate-x-1/2 scale-0 bg-gray-900 text-white text-sm w-max rounded p-2 transition-all;
+	}
+}
